test/errors/ltac/return1.ls

#OUTPUT
#Syntax Error: Cannot return value in void function: main
# -> [14] return 0;
#
#END

#RET 0

extern func printf(s:str, ...)

func main()
begin
    return 0;
end

